--- a/Framebuffer.mw
+++ b/Framebuffer.mw
@@ -1,18 +1,10 @@
-{{InfoBox stack
-|{{InfoBox wikipedia|header=true}}
-}}
+=Framebuffer=
 
-The '''framebuffer''''s original function is as a video RAM cache to allow more flexibility to (older) video cards.  Many newer cards come with framebuffers on board, which are often already compatible with many operating systems.  Enabling framebuffer support in the Linux kernel will often cause graphical artifacts or black screen displays.  For most newer cards, this option should not be selected when using the LiveDVD.
+==Disambiguation==
 
-== See also ==
+[http://www.avrfreaks.net/wiki/index.php/Documentation:Linux/Framebuffer Add video hardware to NGW100 (AVG freaks wiki)]
 
-* {{See also|Intel}}
-* {{See also|Nouveau}}
-* {{See also|Radeon}}
-* {{See also|Uvesafb}}
+==Video framebuffer==
+The framebuffer's original function is as a video RAM cache to allow more flexibility to (older) video cards.  Many newer cards come with framebuffers on board, which are often already compatible with many operating systems.  Enabling framebuffer support in the Linux kernel will often cause graphical artifacts or black screen displays.  For most newer cards, this option should not be selected when using the LiveDVD.
 
-== External resources ==
-
-* https://forums.gentoo.org/viewtopic-p-8111658.html#8111658
-
-[[Category:Graphics Adapters]]
+More information is available on the KMS page.
