Create Qt page with appropriate links to related pages

--- a/Qt.mw
+++ b/Qt.mw
@@ -1,39 +1,14 @@
-{{Stub}}
-{{InfoBox stack
-|{{InfoBox homepage|https://www.qt.io/|header=true}}
-|{{InfoBox wikipedia|Qt_(software)}}
-|{{InfoBox github|gentoo/qt}}
-|{{InfoBox project|Qt}}
-}}
+Qt (pronounced as /ˈkjuːt/ "cute") is a cross-platform application framework that is widely used for developing application software with a graphical user interface (GUI) (in which cases Qt is classified as a widget toolkit), and also used for developing non-GUI programs such as command-line tools and consoles for servers. [http://en.wikipedia.org/wiki/Qt_%28framework%29 [1]]
 
-'''Qt''' (pronounced as /ˈkjuːt/ "cute") is [[Article description::a cross-platform application framework that is widely used for developing application software with a graphical user interface (GUI)]] (in which cases Qt is classified as a widget toolkit), and also used for developing non-GUI programs such as command-line tools and consoles for servers. <ref>https://en.wikipedia.org/wiki/Qt_(software)</ref>
-
-In Gentoo, the ebuilds for Qt and related packages are maintained by [[Project:Qt|a dedicated team]]. This team also maintains [https://gitweb.gentoo.org/proj/qt.git the official qt overlay]. They are very open to user contributions and volunteers who want to become new developers.
+In Gentoo, the Qt ebuilds and related packages are maintained by [http://www.gentoo.org/proj/en/desktop/qt/ a dedicated team] which is a subproject of [http://www.gentoo.org/proj/en/desktop/ the Gentoo Desktop project]. This team also maintains [https://gitorious.org/gentoo-qt/ the official qt overlay]. They are very open to user contributions and volunteers who want to become new developers.
 
 == Installing the Qt libraries ==
+Most users will not need to install the Qt libraries intentionally, but can just let them be pulled in as dependencies of the applications they want to use. For those who want the complete set (e.g. for software development purposes), there is an {{package|x11-libs/qt-meta}} ebuild; and for portage-2.2 users there are [https://gitorious.org/gentoo-qt/qt/trees/master/sets sets] in the overlay.
 
-Most users will not need to install the Qt libraries intentionally, but can just let them be pulled in as dependencies of the applications they want to use. For those who want the complete set (e.g. for software development purposes), there are [https://gitweb.gentoo.org/proj/qt.git/tree/sets sets] in the overlay for Qt5.
+== Qt based desktop environments ==
+There are currently two Qt based desktop environments available in Gentoo. The most well-known and best developed one is [[KDE]]. More recently there is also a more "light-weight" DE in development: [[Razor-qt]]. These can be complemented with applications from the [[Qt/Desktop|desktop applications]] list.
 
-== Qt-based desktop environments ==
-
-There are currently two Qt-based desktop environments available in Gentoo. The most well-known and best developed one is [[KDE#Plasma|KDE Plasma]]. There is also a younger and more "light-weight" DE: [[LXQt]] (a merge of Razor-Qt and LXDE). These can be complemented with [[KDE#Applications|KDE Applications]] and packages from the [[Qt Desktop applications]] list.
-
-== Compiling programs that use qmake and need Qt5 ==
-
-Programs that need Qt5 will need its version of qmake.  It is located in {{Path|/usr/lib/qt5/bin}} and needs to be executed with its full path (i.e., {{Path|/usr/lib/qt5/bin/qmake}}).  After it's run, compilation will just work.
-
-Alternatively, one can use {{package|dev-qt/qtchooser}} functionality in the development environment. Start with:
-{{Cmd|qtchooser --help}}
-
-== Frequently asked questions ==
-
+== Frequently Asked Questions ==
 Please see the [[Qt/FAQ]] page.
-
-== External resources ==
-
-* [https://wiki.archlinux.org/index.php/Qt Arch Wiki article about Qt]
-
-== References ==
-<references />
 
 [[Category:Qt]]
